# masterbot

./: .env.example  .gitattributes  .gitignore  .manual_gemini_cache.json  BACKUP_GUIDE.md  CLAUDE.md  DEVELOPMENT.md  ENHANCED_BOT_README.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  MANUAL.md  PROJECT_DOCUMENTATION.txt  README.md  TELEGRAM_BOT_AUDIT.md  TELEGRAM_FIXES_SUMMARY.md  TENACITY_GUIDE.md  create_test_sheet.py  docker-compose.yml  filtered_files.txt  final_missing.txt  generate_manual_1.py  missing_files.txt  project_files.txt  pyproject.toml  remaining_missing.txt  requirements.txt  setup_enhanced_bot.sh  start_bot.sh  stop_bot.sh  tradesv3.dryrun.sqlite  tree_raw.txt
.gemini/: settings.json
.gemini/hooks/: audit_log.py
.gemini/policies/: cipher.toml
.github/: GITHUB_FEATURES_GUIDE.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  performance_issue.yml
.github/workflows/: ci.yml  codeql.yml  stale.yml  strategy_test.yml
.qnt/: settings.json
.qnt/hooks/: audit_log.py
.qnt/skills/performance-optimizer/: SKILL.md
.qnt/skills/sentiment-analyzer/: SKILL.md
.qnt/skills/strategy-researcher/: SKILL.md
.qnt/skills/system-administrator/: SKILL.md
automation/: backup.sh  convert_to_parquet.py  db_migration.py  graduation_check.py  health_check.py  intelligent_reporter.py  lark_notifier.py  learning_orchestrator.py  parse_hyperopt.py  post_mortem.py  run_mlflow.sh  run_self_healer.sh  run_sentiment.sh  security_check.sh  self_healer.py  sync_order_flow.sh  test_hyperliquid.py  update_qnt_brain.py  verify_api_permissions.py  weekly_hyperopt.sh  weekly_report.py  workspace_reporter.py
automation/workflows/: reporting_workflow.py
bus/: __init__.py
bus/consumers/: __init__.py  event_store_consumer.py  signal_handler.py
config/: config_bear_scalp.json  config_daily.json  config_freqai_vault.json.template  config_hyperliquid.json  config_mean_reversion.json  config_micro.json  config_paper.json  config_paper.json.template  config_scalp.json  config_swing.json  config_trend_follow.json  crontab_m1.txt  dynamic_params.json  grafana_dashboard.json  sentiment_weights.json  supervisord.conf  telegram_enabled.json  vault_constraints.json
config/overrides/: MeanReversionV1.json  MicroScalpV1.json  SwingV1.json  TrendFollowV1.json
config/rules/: example_rules.yaml
docs/superpowers/plans/: 2026-05-21-cipher-merge.md  2026-05-28-cipher-master-upgrade.md
docs/superpowers/specs/: 2026-05-21-cipher-merge-design.md  2026-05-23-closed-loop-learning-design.md
graphify-out/: GRAPH_REPORT.md  manifest.json
logs/reports/: report_2026-05-24.json
mcp/: webhook.py
qnt/: .issues_log  QNT.md  agent.py  browser_bridge.sh  browser_fetch.js  event_store.py  generate_context.sh  nats_publisher.py  nats_subjects.py  nats_subscriber.py  polars_indicators.py  polars_ohlcv.py
qnt/backup/: db_backup.py  r2_backup.py
qnt/bridge/: bridge.py
qnt/browser_output/browser_output/: page_forexfactory.com_2026-05-23T07-31-40.txt  page_forexfactory.com_2026-05-23T07-31-54.txt  (+8 more)
qnt/cockpit/: cockpit.py  cockpit_static.py  exporter.py
qnt/data/: backtest_calibrator.py  cdd_ingestor.py  data_pipeline.py  hf_signals_ingestor.py  historical_ingestor.py  retrain_hmm_extended.py
qnt/freqai/: VaultFreqaiModel.py
qnt/hyperopt/: walk_forward.py
qnt/lab/: lab.py  weekly_strategy_scan_new.sh
qnt/learning/: constraint_extractor.py  outcome_validator.py  param_optimizer.py  scores.json  sentiment_calibrator.py
qnt/memory/: autonomy_router.py  com.cipher.qnt.reconnect.plist  device_router.py  enhanced_bot.py  memory_manager.py  qnt_memory.json  qnt_notifier.py  reply_listener.py  sync_memory.sh  telegram_webhook_server.py
qnt/oracle/: export_lstm_onnx.py  hmm_model.pkl  hmm_regime.py  onnx_inference.py  oracle_anomaly.py  oracle_calendar.py  oracle_macro.py  oracle_runner.py  oracle_sentiment.py  order_flow.py  order_flow_state.json  realtime_orderflow.py  regime_rs_bridge.py  sentiment_gate.py  test_hmm_regime.py  train_regime_lstm.py
qnt/rust_engine/: Cargo.toml
qnt/shadow/: resource_monitor.py  resource_state.json  shadow_hyperopt.py
qnt/shield/: allocator.py  shield.py
qnt/src/: README.md  anomaly_scan.py  backtest_sweep.py  calendar_gate.py  correlate.py  exposure_aggregator.py  hyperopt_sync.py  package-lock.json  package.json
qnt/thesis/: context_builder.py  thesis_reader.py  thesis_runner.py
qnt/tools/: benchmark.py  cockpit.py  funding_arb.py  hyperopt.py  montecarlo.py  oracle.py  risk.py  rule_engine.py  significance.py  vault.py
qnt/vault/: post_mortem.py  post_mortem_loop.py  test_vault.py  vault.py  vault_indexer.py
risk/: balance_state.json  balance_tracker.py  correlation_guard.py  dca.py  macro_history.json  macro_state.json  risk_manager.py  stake_sizer.py  test_risk_manager.py  twap.py
risk/risk_checks_rs/: Cargo.toml  build.sh
risk/risk_checks_rs/src/: lib.rs
rust_engine/: Cargo.toml
scripts/hooks/: create-bundle.sh  post-compact.sh  pre-compact.sh
scripts/skills/: can-parallelize.sh  find-relevant.sh  orchestrator-template.md  project-context.sh  summarize-file.sh
sentiment/: export_cryptobert_onnx.py  onnx_pipeline.py  pipeline.py  reader.py  test_pipeline.py
sentiment/scores/: current_score.json  history.csv
strategies/: regime_detector.py
strategies/active/: Auto202605030340.py  BearScalpV1.py  DailyTrendV1.py  MeanReversionV1.json  MeanReversionV1.py  MicroScalpV1.py  ScalpV1.py  SwingV1.py  TrendFollowV1.py  VectorVaultV1.py
strategies/candidates/: MeanReversionV1.json  MeanReversionV1.py  TrendFollowV1.py
strategies/research/: scan_20260428.md
tests/: conftest.py  test_dca.py  test_event_bus.py  test_event_store.py  test_funding_arb.py  test_indicators.py  test_montecarlo.py  test_rule_engine.py  test_significance.py  test_stake_sizer.py  test_twap.py  test_vault_freqai.py  test_walk_forward.py  test_webhook.py
thesis/: BNB_USDT.json  BTC_USDT.json  ETH_USDT.json  SOL_USDT.json  XRP_USDT.json
webui/: server.py
(+31 files in other folders)
