[project]
name = "cipher"
version = "1.0.0"
description = "Cipher — multi-strategy autonomous crypto trading system"
requires-python = ">=3.12"

# Direct cipher dependencies only.
# freqtrade is installed separately from the local submodule (./freqtrade).
# numpy/pandas lower bounds match freqtrade's pinned versions so uv resolves consistently.
dependencies = [
    # Data / numerics
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "polars>=0.20.0",
    "orjson>=3.9.0",
    "numba>=0.61.0",

    # ML / modelling
    "scikit-learn>=1.8.0",
    "xgboost>=3.0.0",
    "torch>=2.11.0",
    "transformers>=5.0.0",
    "onnxruntime>=1.17.0",
    "sentence-transformers>=2.7.0",

    # Vector DB
    "qdrant-client>=1.9.0",

    # Database / storage
    "psycopg2-binary>=2.9.0",

    # Workflow orchestration
    "prefect>=3.0.0",

    # Market data / exchange
    "order-book>=0.6.0",

    # Sentiment data sources
    "praw>=7.8.0",
    "telethon>=1.43.0",

    # Automation / monitoring
    "psutil>=7.0.0",
    "schedule>=1.2.0",
    "supervisor>=4.3.0",
    "python-dotenv>=1.0.0",

    # AI agent
    "pydantic-ai>=1.0.0",
    "anthropic>=0.40.0",

    # CLI / output
    "rich>=15.0.0",
    "typer>=0.12.0",
    "requests>=2.33.0",
    "httpx>=0.28.0",

    # Visualisation
    "matplotlib>=3.10.0",
    "plotly>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
]

[tool.uv]
# Install freqtrade as an editable package from the local submodule.
# After cloning, run: uv pip install -e ./freqtrade
# Then: uv sync

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
    "venv",
    "freqtrade",
    "user_data",
    "risk/risk_checks_rs",
    ".git",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line-length enforced by formatter, not lint
]

[tool.ruff.lint.isort]
known-first-party = ["qnt", "risk", "sentiment", "strategies", "config", "automation"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
