[package]
name = "rust-engine"
version = "1.0.0"
edition = "2021"
description = "Vectorized pattern-matching engine for VectorVaultV1 — parallel Euclidean nearest-neighbor"

[lib]
name = "rust_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
rayon = "1.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
